--- a/JS/闭包.md
+++ b/JS/闭包.md
@@ -78,5 +78,5 @@ function createFunctions(){  var result = new Array();
 
 匿名函数的执行环境具有全局性，因此其 this 对象通常指向 window
 
-闭包的this对象一般也是指向window。具体使用用要看具体的情况，有没有实例化对象，有没有使用apply\(\) call\(\) 等来改变this对象。
+**闭包的this对象一般也是指向window**。具体使用用要看具体的情况，有没有实例化对象，有没有使用apply\(\) call\(\) 等来改变this对象。
 
