--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -1,2 +1,34 @@
 垂直居中
 
+以下面例子为例说明，讲一个div居于页面中间
+
+
+```
+<div class="container">
+    <div class="content">
+        <div id="id1" class="border"></div>
+        <div id="id2" class="border"></div>
+    </div>
+</div>
+<style>
+        body,html {
+            margin: 0;
+        }
+        .container{
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            position: relative;
+        }
+        .content{
+            width: 400px;
+            height: 200px;
+            background: #CCCCCC;
+            margin:auto;
+
+            /*方法一*/
+            vertical-align: middle;
+        }
+    </style>
+```
+
