--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -2,14 +2,17 @@
 
 以下面例子为例说明，讲一个div居于页面中间
 
-
-```
+```html
 <div class="container">
     <div class="content">
         <div id="id1" class="border"></div>
         <div id="id2" class="border"></div>
     </div>
 </div>
+```
+
+
+```css
 <style>
         body,html {
             margin: 0;
@@ -25,10 +28,11 @@
             height: 200px;
             background: #CCCCCC;
             margin:auto;
-
-            /*方法一*/
-            vertical-align: middle;
         }
-    </style>
+</style>
+
 ```
+
+
+
 
