--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -32,6 +32,32 @@
 </style>
 
 ```
+**情况一**：在明确知道父元素与子元素的height属性值
+方法一：父元素使用相对定位，子元素使用绝对定位
+
+```css
+.content {
+            /*方法一*/
+            position: absolute;
+            /*top: 150px;*/
+            /*margin-top: 150px;*/
+}
+```
+方法二：flex布局
+
+```css
+/*方法二： flex*/
+        .container{
+            display: flex;
+        }
+        .content{
+            align-self:center;
+        }
+
+```
+
+
+
 
 
 
