--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -33,7 +33,23 @@
 
 ```
 **情况一**：在明确知道父元素与子元素的height属性值
-方法一：父元素使用相对定位，子元素使用绝对定位
+
+
+```
+.container {
+    
+            height: 500px;
+        }
+
+        .content {
+             width: 400px;
+             height: 200px;
+        }
+```
+
+
+方法一：父元素使用相对定位，子元素使用绝对定位，使用top或者margin等改变位置的属性，设置为父元素高度的一半减去子元素高度的一半
+
 
 ```css
 .content {
@@ -55,6 +71,23 @@
         }
 
 ```
+
+**情况二**：父元素或者子元素高度没有明确表明，但是高度是有的，这时flex同样使用，其他方法使用JS获取到高度在重新设置
+
+方法三：flex布局
+
+```css
+/*方法二： flex*/
+        .container{
+            display: flex;
+        }
+        .content{
+            align-self:center;
+        }
+
+```
+**注意**：flex布局是CSS3中有有用的发明，尤其在剧中为题上，设置普通的样式不好解决的情况下，使用flex布局很容易解决，在以后使用的过程中，有限使用flex布局
+
 
 
 
