--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -11,7 +11,6 @@
 </div>
 ```
 
-
 ```css
 <style>
         body,html {
@@ -30,14 +29,13 @@
             margin:auto;
         }
 </style>
-
 ```
-**情况一**：在明确知道父元素与子元素的height属性值
 
+#### **情况一**：在明确知道父元素与子元素的height属性值
 
 ```
 .container {
-    
+
             height: 500px;
         }
 
@@ -47,9 +45,7 @@
         }
 ```
 
-
-方法一：父元素使用相对定位，子元素使用绝对定位，使用top或者margin等改变位置的属性，设置为父元素高度的一半减去子元素高度的一半
-
+**方法一**：父元素使用相对定位，子元素使用绝对定位，使用top或者margin等改变位置的属性，设置为父元素高度的一半减去子元素高度的一半
 
 ```css
 .content {
@@ -59,7 +55,8 @@
             /*margin-top: 150px;*/
 }
 ```
-方法二：flex布局
+
+**方法二**：flex布局
 
 ```css
 /*方法二： flex*/
@@ -69,12 +66,11 @@
         .content{
             align-self:center;
         }
-
 ```
 
-**情况二**：父元素或者子元素高度没有明确表明，但是高度是有的，这时flex同样使用，其他方法使用JS获取到高度在重新设置
+#### **情况二**：父元素或者子元素高度没有明确表明，但是高度是有的，这时flex同样使用，其他方法使用JS获取到高度在重新设置
 
-方法三：flex布局
+**方法三**：flex布局
 
 ```css
 /*方法二： flex*/
@@ -84,14 +80,36 @@
         .content{
             align-self:center;
         }
-
 ```
+
 **注意**：flex布局是CSS3中有有用的发明，尤其在剧中为题上，设置普通的样式不好解决的情况下，使用flex布局很容易解决，在以后使用的过程中，有限使用flex布局
 
+  
+**方法四**：使用JS获取相关高度，再给他添加样式
 
+```html
+<script type="text/javascript">
+    let father = document.getElementsByClassName('container')[0];
+    let son = document.getElementsByClassName('content')[0];
+    son.style.position= 'absolute';
+    son.style.top= (father.offsetHeight-son.offsetHeight)/2 +'px' ;
+    debugger;
+</script>
+```
 
+**方法五**：使用**`transform`**，对位置进行移动，这个方法是比较好操作的，不受高度是否知道限制，自由的大，适用性广。
 
+```css
+.content {
+            position: relative;
+            transform: translateY(50%);
+        }
+```
 
+**情况三**：一些在特定环境下使用的居中操作
+
+* 使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，此方法只针对于内嵌或者行内元素，使用时经常发现不起作用，以为没用，此时要去检查是否为行业元素。比如加上table和table-cell属性。
+* `line-height`，这个使用也是有使用条件的。 
 
 
 
