--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -84,7 +84,6 @@
 
 **注意**：flex布局是CSS3中有有用的发明，尤其在剧中为题上，设置普通的样式不好解决的情况下，使用flex布局很容易解决，在以后使用的过程中，有限使用flex布局
 
-  
 **方法四**：使用JS获取相关高度，再给他添加样式
 
 ```html
@@ -97,7 +96,7 @@
 </script>
 ```
 
-**方法五**：使用**`transform`**，对位置进行移动，这个方法是比较好操作的，不受高度是否知道限制，自由的大，适用性广。
+**方法五**：使用`transform`，对位置进行移动，这个方法是比较好操作的，不受高度是否知道限制，自由的大，适用性广。
 
 ```css
 .content {
@@ -109,7 +108,7 @@
 **情况三**：一些在特定环境下使用的居中操作
 
 * 使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，此方法只针对于内嵌或者行内元素，使用时经常发现不起作用，以为没用，此时要去检查是否为行业元素。比如加上table和table-cell属性。
-* `line-height`，这个使用也是有使用条件的。 
-
+* `line-height`，这个使用也是有使用条件的。 在应用到一个块级元素时，它定义了该元素中基线之间的最小距离而不是最大距离。
+* 
 
 
