--- a/CSS/垂直居中.md
+++ b/CSS/垂直居中.md
@@ -109,6 +109,10 @@
 
 * 使用`vertical-align`定义**行内元素**的基线相对于该元素所在行的基线的垂直对齐，此方法只针对于内嵌或者行内元素，使用时经常发现不起作用，以为没用，此时要去检查是否为行业元素。比如加上table和table-cell属性。
 * `line-height`，这个使用也是有使用条件的。 在应用到一个块级元素时，它定义了该元素中基线之间的最小距离而不是最大距离。
-* 
+
+### 总结：
+
+综上所属，最好用的当然属于flex，有些人称之为终级杀器，其次可以使用transform。使用定位的方法并不是很明智。
+
 
 
