--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -1,2 +1,46 @@
 # 同源策略到前端跨域
-前言：之前学习源生ajax时，遇到过ajax跨越问题，当时看红宝书知道CROS解决，一直在前端设置，不成功，一直以为是我哪里没有设置好，到后面才发现其实这个解决是需要在服务器端返回信息里面添加返回头`Response Header`，让浏览器允许访问跨域资源。实际上， 浏览器不会拦截不合法的跨域请求, 而是拦截了他们的响应, 因此即使请求不合法, 很多时候, 服务器依然收到了请求。后面看了[路易斯的ajax知识体系](http://louiszhai.github.io/2016/11/02/ajax/#%E4%BB%80%E4%B9%88%E6%98%AFCORS)又知道了
+
+前言：之前学习源生ajax时，遇到过ajax跨越问题，当时看红宝书知道CROS解决，一直在前端设置，不成功，一直以为是我哪里没有设置好，到后面才发现其实这个解决是需要在服务器端返回信息里面添加返回头`Response Header`，让浏览器允许访问跨域资源。实际上， 浏览器不会拦截不合法的跨域请求, 而是拦截了他们的响应, 因此即使请求不合法, 很多时候, 服务器依然收到了请求。后面看了[路易斯的ajax知识体系](http://louiszhai.github.io/2016/11/02/ajax/#%E4%BB%80%E4%B9%88%E6%98%AFCORS)又知道了有关ajax跨域还有其他的跨域解决方案，我以为我懂了，但是都没有去验证，直到过了一段时间，再看到这篇博文以及路易斯关于同源策略到前端跨域这边文章时，自己对跨域的了解其实很片面。今天好好总结一下有关跨域的整个由来以及解决方案。
+
+## 同源策略
+
+同源策略 (Same-Origin Policy) 最早由 Netscape 公司提出, 所谓同源就是要求, 域名, 协议, 端口相同. 非同源的脚本不能访问或者操作其他域的页面对象(如DOM等). 作为著名的安全策略, 虽然它只是一个规范, 并不强制要求, 但现在所有支持 javaScript 的浏览器都会使用这个策略. 以至于该策略成为浏览器最核心最基本的安全功能, 如果缺少了同源策略, web的安全将无从谈起.
+
+网上的一个栗子：相对 [http://store.company.com/dir/page.html](http://store.company.com/dir/page.html) 同源检测的示例:
+
+<table>
+<thead>
+<tr>
+<th style="text-align:left">url</th>
+<th style="text-align:center">结果</th>
+<th style="text-align:right">原因</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">[http://store.company.com/dir/inner/another.html](http://store.company.com/dir/inner/another.html)</td>
+<td style="text-align:center">成功</td>
+<td style="text-align:right">同一域名</td>
+</tr>
+<tr>
+<td style="text-align:left">[http://store.company.com/dir2/other.html](http://store.company.com/dir2/other.html)</td>
+<td style="text-align:center">成功</td>
+<td style="text-align:right">同一域名下不同文件夹</td>
+</tr>
+<tr>
+<td style="text-align:left">[https://store.company.com/secure.html](https://store.company.com/secure.html)</td>
+<td style="text-align:center">失败</td>
+<td style="text-align:right">不同的协议 ( https )</td>
+</tr>
+<tr>
+<td style="text-align:left">[http://store.company.com:81/dir/etc.html](http://store.company.com:81/dir/etc.html)</td>
+<td style="text-align:center">失败</td>
+<td style="text-align:right">不同的端口 ( 81 )</td>
+</tr>
+<tr>
+<td style="text-align:left">[http://news.company.com/dir/other.html](http://news.company.com/dir/other.html)</td>
+<td style="text-align:center">失败</td>
+<td style="text-align:right">不同的主机 ( news )</td>
+</tr>
+</tbody>
+</table>
