--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -12,34 +12,34 @@
 <thead>
 <tr>
 <th style="text-align:left">url</th>
-<th style="text-align:center">结果</th>
+<th style="text-align:left">结果</th>
 <th style="text-align:right">原因</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td style="text-align:left">[http://store.company.com/dir/inner/another.html](http://store.company.com/dir/inner/another.html)</td>
-<td style="text-align:center">成功</td>
+<td style="text-align:left">成功</td>
 <td style="text-align:right">同一域名</td>
 </tr>
 <tr>
 <td style="text-align:left">[http://store.company.com/dir2/other.html](http://store.company.com/dir2/other.html)</td>
-<td style="text-align:center">成功</td>
+<td style="text-align:left">成功</td>
 <td style="text-align:right">同一域名下不同文件夹</td>
 </tr>
 <tr>
 <td style="text-align:left">[https://store.company.com/secure.html](https://store.company.com/secure.html)</td>
-<td style="text-align:center">失败</td>
+<td style="text-align:left">失败</td>
 <td style="text-align:right">不同的协议 ( https )</td>
 </tr>
 <tr>
 <td style="text-align:left">[http://store.company.com:81/dir/etc.html](http://store.company.com:81/dir/etc.html)</td>
-<td style="text-align:center">失败</td>
+<td style="text-align:left">失败</td>
 <td style="text-align:right">不同的端口 ( 81 )</td>
 </tr>
 <tr>
 <td style="text-align:left">[http://news.company.com/dir/other.html](http://news.company.com/dir/other.html)</td>
-<td style="text-align:center">失败</td>
+<td style="text-align:left">失败</td>
 <td style="text-align:right">不同的主机 ( news )</td>
 </tr>
 </tbody>
