--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -8,8 +8,6 @@
 
 网上的一个栗子：相对 [http://store.company.com/dir/page.html](http://store.company.com/dir/page.html) 同源检测的示例:
 
-
-
 | URL | 结果 | 原因 |
 | :--- | :--- | :--- |
 | [http://store.company.com/dir/inner/another.html](http://store.company.com/dir/inner/another.html) | 成功 | 同一域名 |
@@ -18,5 +16,69 @@
 | [http://store.company.com:81/dir/etc.html](http://store.company.com:81/dir/etc.html) | 失败 | 不同的端口 \( 81 \) |
 | [http://news.company.com/dir/other.html](http://news.company.com/dir/other.html) | 失败 | 不同的主机 \( news \) |
 
+同源策略要求三同, 即:**同域**,**同协议**,**同端口**.
 
+* 同域即host相同, 顶级域名, 一级域名, 二级域名, 三级域名等必须相同, 且域名不能与 ip 对应;
+* 同协议要求, http与https协议必须保持一致;
+* 同端口要求, 端口号必须相同.
+
+## 跨域访问
+
+关于解决跨域访问的方法， 一共收集到以下几种，CROS，取消浏览器安全校验，JSONP实际操作过，其他的方法来源于网络，并没有验证。
+
+### 1、主域相同的跨域
+
+#### 1.1、**document.domain**
+
+> **document.domain**的场景只适用于不同子域的框架间的交互，及主域必须相同的不同源。
+
+通过修改document的domain属性，我们可以在域和子域或者不同的子域之间通信\(即它们必须在同一个一级域名下\). 同域策略认为域和子域隶属于不同的域，比如a.com和 script.a.com是不同的域，这时，我们无法在a.com下的页面中调用script.a.com中定义的JavaScript方法。但是当我们把它们document的domain属性都修改为a.com，浏览器就会认为它们处于同一个域下，那么我们就可以互相获取对方数据或者操作对方DOM了。
+
+比如, 我们在 www.a.com/a.html 下, 现在想获取 www.script.a.com/b.html, 即主域名相同, 二级域名不同. 那么可以这么做:
+
+```js
+document.domain = 'a.com';
+var iframe = document.createElement('iframe');
+iframe.src = 'http://www.script.a.com/b.html';
+iframe.style.display = 'none';
+document.body.appendChild(iframe);
+iframe.addEventListener('load',function(){
+    //TODO 载入完成时做的事情
+    //var _document = iframe.contentWindow.document;
+     //...
+},false);
+```
+
+> 注：浏览器单独保存端口号。任何的赋值操作，包括document.domain = document.domain都会以null值覆盖掉原来的端口号。因此，赋值时必须带上端口号，确保端口号不会为null.
+
+---
+
+### 2、完全不同源的跨域（两个页面之间的通信）
+
+#### 2.1 通过location.hash跨域
+
+假设域名a.com下的文件cs1.html要和jianshu.com域名下的cs2.html传递信息。  
+1、cs1.html首先创建自动创建一个隐藏的iframe，iframe的src指向jianshu.com域名下的cs2.html页面。  
+2、cs2.html响应请求后再将通过修改cs1.html的hash值来传递数据。  
+3、同时在cs1.html上加一个定时器，隔一段时间来判断location.hash的值有没有变化，一旦有变化则获取获取hash值。
+
+> 注：由于两个页面不在同一个域下IE、Chrome不允许修改parent.location.hash的值，所以要借助于a.com域名下的一个代理iframe。
+
+优点：1.可以解决域名完全不同的跨域。2.可以实现双向通讯。  
+缺点：location.hash会直接暴露在URL里，并且在一些浏览器里会产生历史记录，数据安全性不高也影响用户体验。另外由于URL大小的限制，支持传递的数据量也不大。有些浏览器不支持onhashchange事件，需要轮询来获知URL的变化。
+
+#### 2.2通过window.name跨域
+
+window对象有个name属性，该属性有个特征：即在一个窗口\(window\)的生命周期内,窗口载入的所有的页面都是共享一个window.name的，每个页面对window.name都有读写的权限，window.name是持久存在一个窗口载入过的所有页面中的。window.name属性的神奇之处在于name 值在不同的页面（甚至不同域名）加载后依旧存在（如果没修改则值不会变化），并且可以支持非常长的 name 值（2MB）。
+
+```
+ window.name = data;//父窗口先打开一个子窗口，载入一个不同源的网页，该网页将信息写入。        
+ location = 'http://parent.url.com/xxx.html';//接着，子窗口跳回一个与主窗口同域的网址。
+ var data = document.getElementById('myFrame').contentWindow.name。//然后，主窗口就可以读取子窗口的window.name了。
+
+```
+
+如果是与iframe通信的场景就需要把iframe的src设置成当前域的一个页面地址。
+
+这个方式非常适合单向的数据请求，而且协议简单、安全. 不会像JSONP那样不做限制地执行外部脚本.
 
