--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -75,10 +75,37 @@ window对象有个name属性，该属性有个特征：即在一个窗口\(windo
  window.name = data;//父窗口先打开一个子窗口，载入一个不同源的网页，该网页将信息写入。        
  location = 'http://parent.url.com/xxx.html';//接着，子窗口跳回一个与主窗口同域的网址。
  var data = document.getElementById('myFrame').contentWindow.name。//然后，主窗口就可以读取子窗口的window.name了。
-
 ```
 
 如果是与iframe通信的场景就需要把iframe的src设置成当前域的一个页面地址。
 
 这个方式非常适合单向的数据请求，而且协议简单、安全. 不会像JSONP那样不做限制地执行外部脚本.
+
+#### 2.3、通过window.postMessage跨域
+
+ES5新增的 postMessage\(\) 方法允许来自不同源的脚本采用异步方式进行有限的通信，可以实现跨文本档、多窗口、跨域消息传递.
+
+语法: postMessage\(data,origin\)
+
+**data**: 要传递的数据，html5规范中提到该参数可以是JavaScript的任意基本类型或可复制的对象，然而并不是所有浏览器都做到了这点儿，部分浏览器只能处理字符串参数，所以我们在传递参数的时候建议使用JSON.stringify\(\)方法对对象参数序列化，在低版本IE中引用json2.js可以实现类似效果.
+
+**origin**：字符串参数，指明目标窗口的源，协议+主机+端口号\[+URL\]，URL会被忽略，所以可以不写，这个参数是为了安全考虑，postMessage\(\)方法只会将message传递给指定窗口，当然如果愿意也可以建参数设置为”\*”，这样可以传递给任意窗口，如果要指定和当前窗口同源的话设置为”/“。
+
+父窗口和子窗口都可以通过message事件，监听对方的消息。message事件的事件对象event，提供以下三个属性：
+
+* 1、event.source：发送消息的窗口。
+* 2、event.origin： 消息发向的网址。
+* 3、event.data：消息内容。
+
+
+
+
+
+
+
+
+
+
+
+
 
