--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -97,15 +97,20 @@ ES5新增的 postMessage\(\) 方法允许来自不同源的脚本采用异步方
 * 2、event.origin： 消息发向的网址。
 * 3、event.data：消息内容。
 
+父页面发送消息:
 
+```js
+window.frames[0].postMessage('message', origin)
+```
 
+iframe接受消息:
 
-
-
-
-
-
-
+```js
+window.addEventListener('message',function(e){
+    if(e.source!=window.parent) return;//若消息源不是父页面则退出
+      //TODO ...
+});
+```
 
 
 
