--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -112,5 +112,39 @@ window.addEventListener('message',function(e){
 });
 ```
 
+#### 2.4、Access Control
+
+此跨域方法目前只在很少的浏览器中得以支持, 这些浏览器可以发送一个跨域的HTTP请求（Firefox, Google Chrome等通过XMLHTTPRequest实现, IE8下通过XDomainRequest实现）, 请求的响应必须包含一个Access- Control-Allow-Origin的HTTP响应头, 该响应头声明了请求域的可访问权限. 例如baidu.com对google.com下的getUsers.php发送了一个跨域的HTTP请求（通过ajax）, 那么getUsers.php必须加入如下的响应头:
+
+```js
+header("Access-Control-Allow-Origin: http://www.baidu.com");//表示允许baidu.com跨域请求本文件
+```
+
+#### 2.5、flash URLLoder
+
+flash有自己的一套安全策略, 服务器可以通过crossdomain.xml文件来声明能被哪些域的SWF文件访问, SWF也可以通过API来确定自身能被哪些域的SWF加载. 当跨域访问资源时, 例如从域 a.com 请求域 b.com上的数据, 我们可以借助flash来发送HTTP请求.
+
+* 首先, 修改域 b.com上的 crossdomain.xml\(一般存放在根目录, 如果没有需要手动创建\) , 把 a.com 加入到白名单;
+
+```xml
+<?xml version="1.0"?>
+<cross-domain-policy>
+<site-control permitted-cross-domain-policies="by-content-type"/>
+<allow-access-from domain="a.com" />
+</cross-domain-policy>
+
+```
+
+* 其次, 通过Flash URLLoader发送HTTP请求, 拿到请求后并返回;
+* 最后, 通过Flash API把响应结果传递给JavaScript.
+
+Flash URLLoader是一种很普遍的跨域解决方案，不过需要支持iOS的话，这个方案就不可行了.
+
+### 3、Ajax请求不同源的跨域跨域
+
+#### 3.1、通过CROS跨域
+
+HTML5带来了一种新的跨域请求的方式 — CORS, 即[Cross-origin resource sharing](https://www.w3.org/TR/cors/) 它更加安全, 上述的 JSONP, postMessage 等, 资源本身没有能力保证自己不被滥用. CORS的目标是保护资源只被可信的访问源以正确的方式访问.
+
 
 
