--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -181,6 +181,23 @@ CORS是一个W3C\(World Wide Web\)标准, 全称是跨域资源共享\(Cross-ori
 
 浏览器将发送一次http请求, 同时在Request头域中增加 Origin 字段, 用来标示请求发起的源, 服务器根据这个源采取不同的响应策略. 若服务器认为该请求合法, 那么需要往返回的 HTTP Response 中添加 Access-Control-_ 等字段._
 
+一个栗子：假如站点 [http://foo.example](http://foo.example) 的网页应用想要访问 [http://bar.other](http://bar.other) 的资源。以下的 JavaScript 代码应该会在 foo.example 上执行：
+
+```
+//foo.example
+var invocation = new XMLHttpRequest();
+var url = 'http://bar.other/resources/public-data/';
+function callOtherDomain() {
+  if(invocation) {    
+    invocation.open('GET', url, true);
+    invocation.onreadystatechange = handler;
+    invocation.send(); 
+  }
+}
+```
+
+![](/assets/CROS.png)
+
 _  
 对于非简单请求, 比如Method为POST且Content-Type值为 application/json 的请求或者Method为 PUT 或 DELETE 的请求, 浏览器将发送两次http请求. 第一次为preflight预检\(Method: OPTIONS\),主要验证来源是否合法. 值得注意的是:OPTION请求响应头同样需要包含 Access-Control-_ 字段等. 第二次才是真正的HTTP请求. 所以服务器必须处理OPTIONS应答\(通常需要返回20X的状态码, 否则xhr.onerror事件将被触发\).
 
