--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -183,7 +183,7 @@ CORS是一个W3C\(World Wide Web\)标准, 全称是跨域资源共享\(Cross-ori
 
 一个栗子：假如站点 [http://foo.example](http://foo.example) 的网页应用想要访问 [http://bar.other](http://bar.other) 的资源。以下的 JavaScript 代码应该会在 foo.example 上执行：
 
-```
+```js
 //foo.example
 var invocation = new XMLHttpRequest();
 var url = 'http://bar.other/resources/public-data/';
@@ -198,6 +198,35 @@ function callOtherDomain() {
 
 ![](/assets/CROS.png)
 
-_  
-对于非简单请求, 比如Method为POST且Content-Type值为 application/json 的请求或者Method为 PUT 或 DELETE 的请求, 浏览器将发送两次http请求. 第一次为preflight预检\(Method: OPTIONS\),主要验证来源是否合法. 值得注意的是:OPTION请求响应头同样需要包含 Access-Control-_ 字段等. 第二次才是真正的HTTP请求. 所以服务器必须处理OPTIONS应答\(通常需要返回20X的状态码, 否则xhr.onerror事件将被触发\).
+```
+//让我们看看，在这个场景中，浏览器会发送什么的请求到服务器，而服务器又会返回什么给浏览器：
+GET /resources/public-data/ HTTP/1.1
+Host: bar.other
+User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1b3pre) Gecko/20081130 
+Minefield/3.1b3pre
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+Accept-Language: en-us,en;q=0.5
+Accept-Encoding: gzip,deflate
+Accept-Charset: ISO-8859-1,utf-8;q=0.7,*;q=0.7
+Connection: keep-alive
+Referer: http://foo.example/examples/access-control/simpleXSInvocation.html
+Origin: http://foo.example //该请求来自于 http://foo.exmaple。
+//以上是浏览器发送请求
+
+HTTP/1.1 200 OK
+Date: Mon, 01 Dec 2008 00:23:53 GMT
+Server: Apache/2.0.61 
+Access-Control-Allow-Origin: * //这表明服务器接受来自任何站点的跨站请求。如果设置为http://foo.example。其它站点就不能跨站访问 http://bar.other 的资源了。
+Keep-Alive: timeout=2, max=100
+Connection: Keep-Alive
+Transfer-Encoding: chunked
+Content-Type: application/xml
+//以上是服务器返回信息给浏览器
+```
+
+通过使用 Origin 和 Access-Control-Allow-Origin 就可以完成最简单的跨站请求。不过服务器需要把 Access-Control-Allow-Origin 设置为 \* 或者包含由 Origin 指明的站点。
+
+#####  非简单请求\(预请求\)
+
+比如Method为POST且Content-Type值为 application/json 的请求或者Method为 PUT 或 DELETE 的请求, 浏览器将发送两次http请求. 第一次为preflight预检\(Method: OPTIONS\),主要验证来源是否合法. 值得注意的是:OPTION请求响应头同样需要包含 Access-Control- 字段等. 第二次才是真正的HTTP请求. 所以服务器必须处理OPTIONS应答\(通常需要返回20X的状态码, 否则xhr.onerror事件将被触发\).
 
