--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -226,7 +226,11 @@ Content-Type: application/xml
 
 通过使用 Origin 和 Access-Control-Allow-Origin 就可以完成最简单的跨站请求。不过服务器需要把 Access-Control-Allow-Origin 设置为 \* 或者包含由 Origin 指明的站点。
 
-#####  非简单请求\(预请求\)
+##### 非简单请求\(预请求\)
 
-比如Method为POST且Content-Type值为 application/json 的请求或者Method为 PUT 或 DELETE 的请求, 浏览器将发送两次http请求. 第一次为preflight预检\(Method: OPTIONS\),主要验证来源是否合法. 值得注意的是:OPTION请求响应头同样需要包含 Access-Control- 字段等. 第二次才是真正的HTTP请求. 所以服务器必须处理OPTIONS应答\(通常需要返回20X的状态码, 否则xhr.onerror事件将被触发\).
+当请求具备以下条件，就会被当成预请求（非简单请求）处理：
+
+（1）请求以 GET, HEAD 或者 POST 以外的方法发起请求。或者，使用 POST，但请求数据为 application/x-www-form-urlencoded, multipart/form-data 或者 text/plain 以外的数据类型。比如说，用 POST 发送数据类型为 application/xml 或者 text/xml 的 XML 数据的请求。
+
+（2）使用自定义请求头（比如添加诸如 X-PINGOTHER）
 
