--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -232,11 +232,25 @@ Content-Type: application/xml
 
 （1）请求以 GET, HEAD 或者 POST 以外的方法发起请求。或者，使用 POST，但请求数据为 application/x-www-form-urlencoded, multipart/form-data 或者 text/plain 以外的数据类型。比如说，用 POST 发送数据类型为 application/xml 或者 text/xml 的 XML 数据的请求。
 
-（2）使用自定义请求头（比如添加诸如 X-PINGOTHER）
-对于非简单请求，浏览器将发送两次http请求. 第一次为preflight预检(Method: OPTIONS),主要验证来源是否合法. 值得注意的是:OPTION请求响应头同样需要包含 Access-Control-* 字段等. 第二次才是真正的HTTP请求. 所以服务器必须处理OPTIONS应答(通常需要返回20X的状态码, 否则xhr.onerror事件将被触发).
+（2）使用自定义请求头（比如添加诸如 X-PINGOTHER）  
+对于非简单请求，浏览器将发送两次http请求. 第一次为preflight预检\(Method: OPTIONS\),主要验证来源是否合法. 值得注意的是:OPTION请求响应头同样需要包含 Access-Control-\* 字段等. 第二次才是真正的HTTP请求. 所以服务器必须处理OPTIONS应答\(通常需要返回20X的状态码, 否则xhr.onerror事件将被触发\).
 
-一个例子：
+一个例子：使用了自定义请求头的非简单请求
 
+```js
+var invocation = new XMLHttpRequest();
+var url = 'http://bar.other/resources/post-here/';
+var body = '{C}{C}{C}{C}{C}{C}{C}{C}{C}{C}Arun';
+function callOtherDomain(){
+  if(invocation){
+    invocation.open('POST', url, true);
+    invocation.setRequestHeader('X-PINGOTHER', 'pingpong');
+    invocation.setRequestHeader('Content-Type', 'application/xml');
+    invocation.onreadystatechange = handler;
+    invocation.send(body); 
+  }
+}
+```
 
 
 
