--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -177,7 +177,7 @@ CORS是一个W3C\(World Wide Web\)标准, 全称是跨域资源共享\(Cross-ori
 * Last-Event-ID  
 * Content-Type字段限三个值 application/x-www-form-urlencoded、multipart/form-data、text/plain
 
-##### 简单请求
+##### 3.1.1 简单请求
 
 浏览器将发送一次http请求, 同时在Request头域中增加 Origin 字段, 用来标示请求发起的源, 服务器根据这个源采取不同的响应策略. 若服务器认为该请求合法, 那么需要往返回的 HTTP Response 中添加 Access-Control-_ 等字段._
 
@@ -226,7 +226,7 @@ Content-Type: application/xml
 
 通过使用 Origin 和 Access-Control-Allow-Origin 就可以完成最简单的跨站请求。不过服务器需要把 Access-Control-Allow-Origin 设置为 \* 或者包含由 Origin 指明的站点。
 
-##### 非简单请求\(预请求\)
+##### 3.1.2 非简单请求\(预请求\)
 
 当请求具备以下条件，就会被当成预请求（非简单请求）处理：
 
@@ -252,5 +252,18 @@ function callOtherDomain(){
 }
 ```
 
+以 XMLHttpRequest 创建了一个 POST 请求，为该请求添加了一个自定义请求头\(X-PINGOTHER: pingpong\)，并指定数据类型为 application/xml。所以，该请求是一个“预请求”形式的跨站请求。浏览器使用一个 OPTIONS 发送了一个“预请求”。
 
+假设服务器成功响应返回部分信息如下：
+
+```
+Access-Control-Allow-Origin: http://foo.example //表明服务器允许http://foo.example的请求
+Access-Control-Allow-Methods: POST, GET, OPTIONS //表明服务器可以接受POST, GET和 OPTIONS的请求方法
+Access-Control-Allow-Headers: X-PINGOTHER //传递一个可接受的自定义请求头列表。服务器也需要设置一个与浏览器对应。否则会报 Request header field X-Requested-With is not allowed by Access-Control-Allow-Headers in preflight response 的错误
+Access-Control-Max-Age: 1728000 //告诉浏览器，本次“预请求”的响应结果有效时间是多久。在上面的例子里，1728000秒代表着20天内，浏览器在处理针对该服务器的跨站请求，都可以无需再发送“预请求”，只需根据本次结果进行判断处理。
+```
+
+##### 3.1.3 附带凭证信息的请求
+
+XMLHttpRequest 和访问控制功能，
 
