--- a/JS/同源策略到前端跨域.md
+++ b/JS/同源策略到前端跨域.md
@@ -297,5 +297,27 @@ Set-Cookie: pageAccess=3; expires=Wed, 31-Dec-2008 01:34:53 GMT
 >
 > 给一个带有withCredentials的请求发送响应的时候，服务器端必须指定允许请求的域名,不能使用“\*”。上面这个例子中，如果响应头是这样的 Access-Control-Allow-Origin：\* ，则响应会失败。
 
+#### 3.2、 JSONP跨域
+
+基本原理：网页通过添加一个`<script>`元素，向服务器请求JSON数据，这种做法不受同源政策限制；服务器收到请求后，将数据放在一个指定名字的回调函数里传回来。例子如下：
+
+```js
+function todo(data){
+  console.log('The author is: '+ data.name);
+}
+var script = document.createElement('script');
+script.src = 'http://www.jianshu.com/author?callback=todo';//向服务器www.jianshu.com发出请求。注意，该请求的查询字符串有一个callback参数，用来指定回调函数的名字。
+document.body.appendChild(script);
+//服务器收到这个请求以后，会将数据放在回调函数的参数位置返回。
+todo({"name": "fewjq"});
+//由于<script>元素请求的脚本，直接作为代码运行。这时，只要浏览器定义了todo函数，该函数就会立即调用。作为参数的JSON数据被视为JavaScript对象。
+```
+
+优点：简单适用，老式浏览器全部支持，服务器改造小。不需要XMLHttpRequest或ActiveX的支持。
+
+缺点：只支持GET请求。
+
+#### 3.3、WebSocket跨域
+
 
 
