--- a/CSS/三栏式布局.md
+++ b/CSS/三栏式布局.md
@@ -1,5 +1,6 @@
 ## 三栏式布局
 
+相关代码地址：[https://github.com/Xia-Ao/baidu-course/tree/master/xiaowei/layout](https://github.com/Xia-Ao/baidu-course/tree/master/xiaowei/layout)
 要求：左右两边固定宽度，中间居中，宽度自适应！  
 下面探讨一下有关三栏式布局的所有方法  
 给定一个[html模板](/template.html), 要求在这个模板上尽可能用多种方法实现三栏式布局
@@ -40,7 +41,7 @@
 </html>
 ```
 
-### 1、flex布局
+### 1、flex布局 
 
 这是CSS3主推的布局模式，目前也是用的最多的，简单来说就是顺着主轴依次放3列，内容在最前，通过order控制显示顺序，通过flex-grow让中间占据全部剩余空间，通过flex-basis设置左、右div的宽度。  
 个人也是优先推荐使用flex实现三栏式布局。  
