--- a/HTTP/转发和重定向的区别.md
+++ b/HTTP/转发和重定向的区别.md
@@ -1,4 +1,4 @@
-#### 转发与重定向
+## 转发与重定向
 
 #### 转发是服务器行为，重定向是客户端行为。
 
@@ -15,6 +15,5 @@
 
 第一次，客户端request A,服务器响应，并response回来，告诉浏览器，你应该去B。这个时候IE可以看到地址变了，而且历史的回退按钮也亮了。重定向可以访问自己web应用以外的资源。**在重定向的过程中，传输的信息会被丢失**。
 
-  
 **请求转发**是服务器内部把对一个request/response的处理权，移交给另外一个对于客户端而言，它只知道自己最早请求的那个A，而不知道中间的B，甚至C、D。 **传输的信息不会丢失。**
 
