--- a/CSS/长度单位、字体单位等易混淆属性.md
+++ b/CSS/长度单位、字体单位等易混淆属性.md
@@ -4,7 +4,13 @@
 
 **px**
 px(pixel)其实应该算是我们最熟悉的长度单位了，是相对屏幕分辨率而言，也是经常被作为其他单位的基准。这个px和物理设备的像素是有区别的，为了保证在不同设备上视觉效果基本相同，px是采用参考像素的,根据css的规范上来看，1px在电脑显示器上看，大概是1/97英寸长。
+
 **in**
 `in`是`inches`的简写，在CSS中， 它与px的换算关系为`1in == 96px`
 
-
+**cm、mm**
+ `1cm==10mm==37.8px`
+#### 相对长度单位
+对长度单位，顾名思义，它的长度是根据其他长度计算出来的。 viewport相关的单位本来也是属于这一部分的，但是为了区别对待，把它单拎出来了
+**em**
+em(font size of the element) 是相对于当前元素的字体大小(font-size)属性值计算出来。并且继承自父元素。由于浏览器默认字体大小是16px，则在**默认情况下1em = 16px**。如果当前元素没有设置字体大小就依赖其父元素的大小。如果其父元素的大小也没有显式的font-size，则向上寻找直至找到能进行计算的元素。这个单位一个比较常见的使用场景是在中文段落的首段缩进两个字。
