--- a/CSS/行内元素与块级元素.md
+++ b/CSS/行内元素与块级元素.md
@@ -1,1 +1,10 @@
 ### 块级元素  VS 行内元素/内联元素
+
+**块级元素block**
+
+* 总是独占一行，表现为另起一行开始，而且其后的元素也必须另起一行显示;
+
+* 宽度\(width\)、高度\(height\)、内边距\(padding\)和外边距\(margin\)都可控制;
+
+
+
