--- a/CSS/行内元素与块级元素.md
+++ b/CSS/行内元素与块级元素.md
@@ -10,8 +10,7 @@
 
 * 和相邻的内联元素在同一行;
 
-* 宽度\(width\)、高度\(height\)、内边距的top/bottom\(padding-top/padding-bottom\)和外边距的top/bottom\(margin-top/margin-bottom\)都不可改变，就是里面
-  文字或图片的大小;
+* 宽度\(width\)、高度\(height\)、内边距的top/bottom\(padding-top/padding-bottom\)和外边距的top/bottom\(margin-top/margin-bottom\)都不可改变，就是里面文字或图片的大小;
 
 
 
