--- a/CSS/行内元素与块级元素.md
+++ b/CSS/行内元素与块级元素.md
@@ -6,11 +6,16 @@
 
 * 宽度\(width\)、高度\(height\)、内边距\(padding\)和外边距\(margin\)都可控制;
 
+* 会忽略vertical-align属性。
+
 **行内元素/内联元素**
 
 * 和相邻的内联元素在同一行;
 
 * 宽度\(width\)、高度\(height\)、内边距的top/bottom\(padding-top/padding-bottom\)和外边距的top/bottom\(margin-top/margin-bottom\)都不可改变，就是里面文字或图片的大小;
+
+* 内联元素一旦浮动，就会自动变为块级元素，并且拥有块级元素的所有属性
+* 可以设置vertical-align属性
 
 ### html块级元素
 
