--- a/CSS/行内元素与块级元素.md
+++ b/CSS/行内元素与块级元素.md
@@ -15,7 +15,30 @@
 * 宽度\(width\)、高度\(height\)、内边距的top/bottom\(padding-top/padding-bottom\)和外边距的top/bottom\(margin-top/margin-bottom\)都不可改变，就是里面文字或图片的大小;
 
 * 内联元素一旦浮动，就会自动变为块级元素，并且拥有块级元素的所有属性
+
 * 可以设置vertical-align属性
+
+一般来讲，我们可以将任何块级元素放入嵌套在一个块级元素中，也可以将任何内联元素嵌套在块级元素中或者将内联元素嵌套在内联元素中，
+
+_但是不能将块级元素放在内联元素中，有一个例外的元素是_
+
+_`<`_
+
+_`a`_
+
+_`>`_
+
+_，可以将任何元素放置在_
+
+_`<`_
+
+_`a`_
+
+_`>`_
+
+_元素中_
+
+。
 
 ### html块级元素
 
