--- a/CSS/行内元素与块级元素.md
+++ b/CSS/行内元素与块级元素.md
@@ -18,9 +18,13 @@
 
 * 可以设置vertical-align属性
 
-_一般来讲，我们可以将任何块级元素放入嵌套在一个块级元素中，也可以将任何内联元素嵌套在块级元素中或者将内联元素嵌套在内联元素中，但是不能将块级元素放在内联元素中，有一个例外的元素是`<a>`，可以将任何元素放置在`<a>`元素中。_
+_一般来讲，我们可以将任何块级元素放入嵌套在一个块级元素中，也可以将任何内联元素嵌套在块级元素中或者将内联元素嵌套在内联元素中，但是不能将块级元素放在内联元素中，有一个例外的元素是_`<a>`_，可以将任何元素放置在_`<a>`_元素中。_
 
-### html块级元素
+#### 块级元素
 
+address , blockquote , center , dir , div , dl , fieldset , form , h1 , h2 , h3 , h4 , h5 , h6 , hr , isindex , menu , noframes , noscript , ol , p , pre , table , ul , li
 
+内联元素/行内元素
+
+a , abbr , acronym , b , bdo , big , br , cite , code , dfn , em , font , i , img , input , kbd , label , q , s , samp , select , small , span , strike , strong , sub , sup ,  textarea , tt , u , var
 
