--- a/CSS/行内元素与块级元素.md
+++ b/CSS/行内元素与块级元素.md
@@ -28,7 +28,7 @@ address , blockquote , center , dir , div , dl , fieldset , form , h1 , h2 , h3 
 
 a , abbr , acronym , b , bdo , big , br , cite , code , dfn , em , font , i , img , input , kbd , label , q , s , samp , select , small , span , strike , strong , sub , sup ,  textarea , tt , u , var
 
-#### 替换元素/可变元素
+#### 替换元素/可变元素（**根据上下文关系确定该元素是块元素还是内联元素**）
 
 
 
