--- a/CSS/行内元素与块级元素.md
+++ b/CSS/行内元素与块级元素.md
@@ -20,15 +20,16 @@
 
 _一般来讲，我们可以将任何块级元素放入嵌套在一个块级元素中，也可以将任何内联元素嵌套在块级元素中或者将内联元素嵌套在内联元素中，但是不能将块级元素放在内联元素中，有一个例外的元素是_`<a>`_，可以将任何元素放置在_`<a>`_元素中。_
 
-#### 块级元素
+**块级元素**
 
 address , blockquote , center , dir , div , dl , fieldset , form , h1 , h2 , h3 , h4 , h5 , h6 , hr , isindex , menu , noframes , noscript , ol , p , pre , table , ul , li
 
-#### 内联元素/行内元素
+**内联元素/行内元素**
 
 a , abbr , acronym , b , bdo , big , br , cite , code , dfn , em , font , i , img , input , kbd , label , q , s , samp , select , small , span , strike , strong , sub , sup ,  textarea , tt , u , var
 
-#### 替换元素/可变元素（**根据上下文关系确定该元素是块元素还是内联元素**）
+**替换元素/可变元素（根据上下文关系确定该元素是块元素还是内联元素）  
+**applet ,button ,del ,iframe , ins ,map ,object , script
 
 
 
