--- a/CSS/布局.md
+++ b/CSS/布局.md
@@ -1,4 +1,14 @@
-### div+css布局的特点
+### div+css布局较table优点
+1、符合W3C标准的，W3C标准提出网页由三部分组成：结构（Structure）、表现（Presentation）和行为（Behavior）。结构清晰明了，结构、样式和行为分离，带来足够好的可维护性。
+
+2、布局更加灵活多样，能够通过样式选择来实现界面设计方面的更多要求。
+
+3、布局改版方便，不需要过多地变动页面内容，通常只要更换相应的css样式就可以将网页变成另外一种风格展现出来。
+
+4、布局可以让一些重要的链接和文字信息等优先让搜索引擎抓取，内容更便于搜索。
+
+5、增加网页打开速度，增强用户体验。
+
 
 ### 一些常用布局方法
 
