--- a/HTTP/如何对网站的文件和资源进行优化.md
+++ b/HTTP/如何对网站的文件和资源进行优化.md
@@ -1,21 +1,19 @@
 ### 如何对网站的文件和资源进行优化？
 
-
-
-1. 1.尽可能减少http请求次数，将css, js, 图片各自合并 
-2. 2.使用CDN，降低通信距离
-3.  3.添加Expire/Cache-Control头 
-4. 4.启用Gzip压缩文件 
-5. 5.将css放在页面最上面 
-6. 6.将script放在页面最下面 
-7. 7.避免在css中使用表达式 
-8. 8.将css, js都放在外部文件中 
-9. 9.减少DNS查询 
-10. 10.最小化css, js，减小文件体积 
-11. 11.避免重定向 
-12. 12.移除重复脚本 
-13. 13.配置实体标签ETag 
-14. 14.使用AJAX缓存，让网站内容分批加载，局部更新
+> 1. 1.尽可能减少http请求次数，将css, js, 图片各自合并 
+> 2. 2.使用CDN，降低通信距离\(CDN是什么\)
+> 3. 3.添加Expire/Cache-Control头
+> 1. 4.启用Gzip压缩文件 
+> 2. 5.将css放在页面最上面 
+> 3. 6.将script放在页面最下面 
+> 4. 7.避免在css中使用表达式 
+> 5. 8.将css, js都放在外部文件中 
+> 6. 9.减少DNS查询 
+> 7. 10.最小化css, js，减小文件体积 
+> 8. 11.避免重定向 
+> 9. 12.移除重复脚本 
+> 10. 13.配置实体标签ETag 
+> 11. 14.使用AJAX缓存，让网站内容分批加载，局部更新
 
 
 
