--- a/CSS/布局.md
+++ b/CSS/布局.md
@@ -1,5 +1,5 @@
 ### div+css布局较table优点
-1、符合W3C标准的，W3C标准提出网页由三部分组成：结构（Structure）、表现（Presentation）和行为（Behavior）。结构清晰明了，结构、样式和行为分离，带来足够好的可维护性。
+1、符合W3C标准的，W3C标准提出**网页由三部分组成：结构（Structure）、表现（Presentation）和行为（Behavior）**。结构清晰明了，结构、样式和行为分离，带来足够好的可维护性。
 
 2、布局更加灵活多样，能够通过样式选择来实现界面设计方面的更多要求。
 
