--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -1,13 +1,13 @@
 ### 7种基本数据类型
 
 * 6种原始类型
-  * null
-  * undefined
-  * Boolean
-  * Number
-  * String
-  * Symbol（ES6中新定义）
-* Object
+  * **null**
+  * **undefined**
+  * **Boolean**
+  * **Number**
+  * **String**
+  * **Symbol**（ES6中新定义）
+* **Object**
 
 
 
