--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -9,5 +9,9 @@
   * **Symbol**（ES6中新定义）
 * **Object**
 
+#### 另一种区分方式
+1、**值类型**：即5种基本类型（string,number,boolean,null,undefined）；
+
+2、**引用类型**：即数组、函数、对象共三种。这三种类型的处理与值类型会有很大的差别。
 
 
