--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -1,8 +1,8 @@
 ### 7种基本数据类型
 
 * 6种原始类型
-  * **null**
-  * **undefined**
+  * **null** 表示缺少的标识，指示变量未指向任何对象。
+  * **undefined** 一个没有被赋值的变量会有个默认值 undefined
   * **Boolean**
   * **Number**
   * **String**
@@ -14,4 +14,19 @@
 
 2、**引用类型**：即数组、函数、对象共三种。这三种类型的处理与值类型会有很大的差别。
 
+
+记住以下结果
+
+
+```js
+typeof null        // object (因为一些以前的原因而不是'null')
+typeof undefined   // "undefined"
+null === undefined // false
+null  == undefined // true
+null === null // true
+null == null // true
+!null //true
+isNaN(1 + null) // false    null转化为Number时为0
+isNaN(1 + undefined) // true  undefined转化为Number时为NaN
+```
 
