--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -2,7 +2,7 @@
 
 * 6种原始类型
   * **null** 表示缺少的标识，指示变量未指向任何对象。
-  * **undefined** 一个没有被赋值的变量会有个默认值 undefined
+  * **undefined** 是全局对象的一个属性
   * **Boolean**
   * **Number**
   * **String**
