--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -17,7 +17,7 @@
 
 记住以下结果
 
-
+**null与undefined**
 ```js
 typeof null        // object (因为一些以前的原因而不是'null')
 typeof undefined   // "undefined"
@@ -29,4 +29,13 @@ null == null // true
 isNaN(1 + null) // false    null转化为Number时为0
 isNaN(1 + undefined) // true  undefined转化为Number时为NaN
 ```
+null与Object
+
+
+```
+null==Object  //false
+null===Object  //false
+
+```
+
 
