Creates assets/==.png
Auto commit by GitBook Editor

--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -10,14 +10,15 @@
 * **Object**
 
 #### 另一种区分方式
+
 1、**值类型**：即5种基本类型（string,number,boolean,null,undefined）；
 
 2、**引用类型**：即数组、函数、对象共三种。这三种类型的处理与值类型会有很大的差别。
 
-
 记住以下结果
 
 **null与undefined**
+
 ```js
 typeof null        // object (因为一些以前的原因而不是'null')
 typeof undefined   // "undefined"
@@ -28,14 +29,26 @@ null == null // true
 !null //true
 isNaN(1 + null) // false    null转化为Number时为0
 isNaN(1 + undefined) // true  undefined转化为Number时为NaN
-```
-null与Object
 
+//但是要记住，null能转化为Number进行计算
+null == 0  //false
+undefined == 0 // false
+```
+
+**null与Object**
 
 ```
 null==Object  //false
 null===Object  //false
-
 ```
 
+### 严格相等`===`
+
+两个被比较的值在比较前都不进行隐式转换
+
+### 非严格相等 `==`
+
+在比较前将两个被比较的值转换为相同类型。在转换后（等式的一边或两边都可能被转换），最终的比较方式等同于全等操作符 === 的比较方式。
+
+![](/assets/==.png)
 
