--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -50,5 +50,19 @@ null===Object  //false
 
 在比较前将两个被比较的值转换为相同类型。在转换后（等式的一边或两边都可能被转换），最终的比较方式等同于全等操作符 === 的比较方式。
 
-![](/assets/==.png)
+#### ![](/assets/==.png)
+
+#### Object.is\(A,B\) 
+
+区分和严格相等`===`之间的区别
+
+```
+Object.is(-0,+0)  //false
+-0 === +0  //true
+
+Object.is(NaN,NAN)  //true
+NaN === NaN  //false
+```
+
+
 
