--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -60,7 +60,7 @@ null===Object  //false
 Object.is(-0 , +0)  //false
 -0 === +0  //true
 
-Object.is(NaN , NAN)  //true
+Object.is(NaN , NaN)  //true
 NaN === NaN  //false
 ```
 
