--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -62,7 +62,10 @@ Object.is(-0 , +0)  //false
 
 Object.is(NaN , NaN)  //true
 NaN === NaN  //false
+
+[1,2] == '1,2'   //true
+[1,2] === '1,2'  //false
 ```
 
-
+ ![](/assets/===.png)
 
