--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -42,6 +42,28 @@ null==Object  //false
 null===Object  //false
 ```
 
+**ToNumber**
+
+```
+Number('')  // 0
+Number('a123')  //NaN
+```
+
+h
+
+| input | result |
+| :--- | :--- |
+| null | +0 |
+| undefined | NaN |
+| Boolean | +0 / 1 |
+| Number | 不转换 |
+| String |  |
+| Symbol | 报错 |
+| Object | ToNumber\(ToPrimitive\( input , Number\)\) |
+|  |  |
+
+![](/assets/toNumber.png)
+
 ### 严格相等`===`
 
 两个被比较的值在比较前都不进行隐式转换
@@ -67,5 +89,7 @@ NaN === NaN  //false
 [1,2] === '1,2'  //false
 ```
 
- ![](/assets/===.png)
+### ![](/assets/===.png)`+`操作符
+
+在加法的过程中，首先把等号左右两边进行了求原值ToPrimitive\(\)操作，然后如果两个原值只要有一个是String类型，就把两个原值都进行转化字符串ToString\(\)操作，进行字符串拼接；否则把两个原值都进行转化数字ToNumber\(\)操作，进行数字相加。
 
