--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -42,28 +42,6 @@ null==Object  //false
 null===Object  //false
 ```
 
-**ToNumber**
-
-```
-Number('')  // 0
-Number('a123')  //NaN
-```
-
-h
-
-| input | result |
-| :--- | :--- |
-| null | +0 |
-| undefined | NaN |
-| Boolean | +0 / 1 |
-| Number | 不转换 |
-| String |  |
-| Symbol | 报错 |
-| Object | ToNumber\(ToPrimitive\( input , Number\)\) |
-|  |  |
-
-![](/assets/toNumber.png)
-
 ### 严格相等`===`
 
 两个被比较的值在比较前都不进行隐式转换
@@ -88,6 +66,30 @@ NaN === NaN  //false
 [1,2] == '1,2'   //true
 [1,2] === '1,2'  //false
 ```
+
+**ToNumber**
+
+```
+Number('')  // 0
+Number('a123')  //NaN
+```
+
+| input | result |
+| :--- | :--- |
+| null | +0 |
+| undefined | NaN |
+| Boolean | +0 / 1 |
+| Number | 不转换 |
+| String |  |
+| Symbol | 报错 |
+| Object | ToNumber\(ToPrimitive\( input , Number\)\) |
+
+### ToPrimitive\(\)
+
+默认用法：ToPrimitive\(input \[, PreferredType\]\)，（ToPrimitive方法可被修改）  
+如果是Date求原值，则PreferredType是String，其他均为Number。  
+PreferredType是String，则先调用toString\(\)，结果不是原始值的话再调用valueOf\(\)，还不是原始值的话则抛出错误；  
+PreferredType是Number，则先调用valueOf\(\)再调用toString\(\)。
 
 ### ![](/assets/===.png)`+`操作符
 
