--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -66,7 +66,7 @@ NaN === NaN  //false
 [1,2] == '1,2'   //true
 [1,2] === '1,2'  //false
 ```
-
+![](/assets/===.png)
 **ToNumber**
 
 ```
@@ -86,12 +86,13 @@ Number('a123')  //NaN
 
 ### ToPrimitive\(\)
 
-默认用法：ToPrimitive\(input \[, PreferredType\]\)，（ToPrimitive方法可被修改）  
-如果是Date求原值，则PreferredType是String，其他均为Number。  
-PreferredType是String，则先调用toString\(\)，结果不是原始值的话再调用valueOf\(\)，还不是原始值的话则抛出错误；  
-PreferredType是Number，则先调用valueOf\(\)再调用toString\(\)。
+默认用法：ToPrimitive\(input \[, PreferredType\]\)，（ToPrimitive方法可被修改）
 
-### ![](/assets/===.png)`+`操作符
+* 如果是Date求原值，则PreferredType是String，其他均为Number。
+* PreferredType是String，则先调用toString\(\)，结果不是原始值的话再调用valueOf\(\)，还不是原始值的话则抛出错误；
+* PreferredType是Number，则先调用valueOf\(\)再调用toString\(\)。
+
+### `+`操作符
 
 在加法的过程中，首先把等号左右两边进行了求原值ToPrimitive\(\)操作，然后如果两个原值只要有一个是String类型，就把两个原值都进行转化字符串ToString\(\)操作，进行字符串拼接；否则把两个原值都进行转化数字ToNumber\(\)操作，进行数字相加。
 
