--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -98,8 +98,11 @@ Number('a123')  //NaN
 在加法的过程中，首先把等号左右两边进行了求原值ToPrimitive\(\)操作，然后如果两个原值只要有一个是String类型，就把两个原值都进行转化字符串ToString\(\)操作，进行字符串拼接；否则把两个原值都进行转化数字ToNumber\(\)操作，进行数字相加。
 
 ```js
-[] + []  // ''
-// PreferredType是Number，则先调用valueOf()再调用toString()。 []==>[]==>''
+[] + []  // ""
+// PreferredType是Number，则先调用valueOf()再调用toString()。 []==>[]==>""
+
+{} + {}  //"[object Object][object Object]"
+
 ```
 
 
