--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -102,6 +102,19 @@ Number('a123')  //NaN
 // PreferredType是Number，则先调用valueOf()再调用toString()。 []==>[]==>""
 
 {} + {}  //"[object Object][object Object]"
+//{} PreferredType是Number，则先调用valueOf()再调用toString() {}==>{}==>"[object Object]"
+
+
+
+[] + {}  //  "[object Object]"
+//[]==>[] ==>""
+//{} PreferredType是Number，则先调用valueOf()再调用toString() {}==>{}==>"[object Object]"
+// 然后字符串拼接
+
+{} + []  // 0
+// 原因在于{}在前，被当成{};直接执行了，变成了 +[],[]的原值是"",+[]需要进行toNumber转换变成了0 ，最后结果为0
+ 
+
 
 ```
 
