--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -113,8 +113,15 @@ Number('a123')  //NaN
 // 原因在于{}在前，被当成{};直接执行了，变成了 +[],[]的原值是"",+[]需要进行toNumber转换变成了0 ，最后结果为0
  
 ++[[ ]][+[ ]]+[+[ ]]
-//
-
+//这个就有意思了，一开始对[][]理解错了，以为是二维数组，二维数组是name[i][j],这个才是对二维数组的调用，[][]是对前面那个一维数组的调用，数组名就是第一个[].
+拆分：
+>> ++[[]][+[]]   +  [+[]]  很明显 我们知道+[]的结果是0
+>> ++[[]][0]  +   [0]   这里我们就看到是对数组[[]]的第0位进行操作，即[]
+>> ++[]  +   [0]
+>> ([]+1)  + [0]
+>> (''+1) +  [0]
+>> '1'+ [0]
+>>'10'
 ```
 
 
