--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -100,6 +100,7 @@ Number('a123')  //NaN
 ```js
 +[]  //0
 +[0] //0
++{}  //NaN
 
 [] + []  // ""
 // PreferredType是Number，则先调用valueOf()再调用toString()。 []==>[]==>""
