--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -15,6 +15,19 @@
 
 2、**引用类型**：即数组、函数、对象共三种。这三种类型的处理与值类型会有很大的差别。
 
+### JS中常用的内置对象
+
+* **date**时间对象
+* **string**字符串对象
+* **Math**数学对象，
+* **Number**数值对象，
+* **Array**数组对象，
+* **function**函数对象,
+* **arguments**函数参数集合,
+* **Boolean**布尔对象，
+* **Error**错误对象,
+* **Object**基础对象
+
 记住以下结果
 
 **null与undefined**
@@ -115,7 +128,7 @@ Number('a123')  //NaN
 
 {} + []  // 0
 // 原因在于{}在前，被当成{};直接执行了，变成了 +[],[]的原值是"",+[]需要进行toNumber转换变成了0 ，最后结果为0
- 
+
 ++[[ ]][+[ ]]+[+[ ]]
 //这个就有意思了，一开始对[][]理解错了，以为是二维数组，二维数组是name[i][j],这个才是对二维数组的调用，[][]是对前面那个一维数组的调用，数组名就是第一个[].
 拆分：
