--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -53,8 +53,9 @@ typeof undefined   // "undefined"
 null === undefined // false
 null  == undefined // true
 null === null // true
-null == null // true
-!null //true
+undefined === undefined// true
+!null  //true
+!undefined  //true
 isNaN(1 + null) // false    null转化为Number时为0
 isNaN(1 + undefined) // true  undefined转化为Number时为NaN
 
