--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -58,6 +58,8 @@ undefined === undefined// true
 !undefined  //true
 isNaN(1 + null) // false    null转化为Number时为0
 isNaN(1 + undefined) // true  undefined转化为Number时为NaN
+1+null  //1
+1+undefined  //NaN
 
 //但是要记住，null能转化为Number进行计算
 null == 0  //false
