--- a/CSS/清除浮动.md
+++ b/CSS/清除浮动.md
@@ -1,2 +1,6 @@
 浮动 Float 是 CSS 中的一种布局方式。它的渲染位置在行框与包含块之间，这样就可以使行框内文字与浮动元素不重叠并且环绕它显示。在布局过程中也经常会使用它来达到左右并排布局的效果。但是，由于浮动特性，容器如果没有明确设定高度，会依照普通流内元素高度设置，这样就会导致脱离普通流的浮动元素溢出容器，影响其后元素布局。
 
+清除浮动是面试中经常遇到的问题，总结一下清除浮动的方法：
+
+设置原型，一个父元素，两个子元素左浮动
+
