--- a/CSS/清除浮动.md
+++ b/CSS/清除浮动.md
@@ -4,3 +4,26 @@
 
 设置原型，一个父元素，两个子元素左浮动
 
+```html
+<div class="parent">parent
+    <div class="son1">son1 float:left</div>
+    <div class="son2">son2 float:left</div>
+</div>
+.parent {
+    background: #999999;
+}
+.son1,.son2{
+    background: #f5e327;
+    float: left;
+    width: 100px;
+    height: 100px;
+    
+}
+.son2{
+    background: #ff1810;
+}
+
+```
+
+
+
