--- a/CSS/清除浮动.md
+++ b/CSS/清除浮动.md
@@ -17,13 +17,18 @@
     float: left;
     width: 100px;
     height: 100px;
-    
+
 }
 .son2{
     background: #ff1810;
 }
-
 ```
+
+![](/assets/clear.png)
+
+### 1、clear: both
+
+添加 空div标签，放在父元素最后一个子元素位置，设置样式为clear
 
 
 
