--- a/CSS/清除浮动.md
+++ b/CSS/清除浮动.md
@@ -26,9 +26,22 @@
 
 ![](/assets/clear.png)
 
+清除浮动实现目的使**父元素的高度被子元素撑满。**
+
 ### 1、clear: both
 
-添加 空div标签，放在父元素最后一个子元素位置，设置样式为clear
+添加 空div标签，放在父元素最后一个子元素位置，设置样式为clear：both。
+
+```
+<div class="parent">parent
+    <div class="son1">son1 float:left</div>
+    <div class="son2">son2 float:left</div>
+    <div class="clear"></div>
+</div>
+.clear{
+    clear: both;
+}
+```
 
 
 
