--- a/CSS/清除浮动.md
+++ b/CSS/清除浮动.md
@@ -28,11 +28,11 @@
 
 清除浮动实现目的使**父元素的高度被子元素撑满。**
 
-### 1、clear: both
+#### 1、clear: both
 
 添加 空div标签，放在父元素最后一个子元素位置，设置样式为clear：both。
 
-```
+```html
 <div class="parent">parent
     <div class="son1">son1 float:left</div>
     <div class="son2">son2 float:left</div>
@@ -40,6 +40,33 @@
 </div>
 .clear{
     clear: both;
+}
+```
+
+![](/assets/clear1.png)
+
+#### 2、设置父元素高度
+
+如果子元素高度确定，则设置父元素高度等于子元素高度，则看起来父元素被子元素撑满，如果子元素高度不确定，这个方法不合适。
+
+```html
+.parent {
+    background: #999999;
+    height: 100px;
+}
+```
+
+![](/assets/clear2.png)
+
+#### 3、使用BFC
+
+BFC有一个特点：计算BFC的高度时，浮动元素也参与计算，我们可以将父元素设置overflow属性形成BFC，这样浮动元素的高度也会参与计算，父元素的高度就会被浮动元素的高度撑满。
+
+```
+.parent {
+    background: #999999;
+    overflow: auto;  
+   /* overflow: hidden;*/  或者hidden
 }
 ```
 
