--- a/CSS/清除浮动.md
+++ b/CSS/清除浮动.md
@@ -62,13 +62,30 @@
 
 BFC有一个特点：计算BFC的高度时，浮动元素也参与计算，我们可以将父元素设置overflow属性形成BFC，这样浮动元素的高度也会参与计算，父元素的高度就会被浮动元素的高度撑满。
 
-```
+```html
 .parent {
     background: #999999;
     overflow: auto;  
    /* overflow: hidden;*/  或者hidden
 }
 ```
+
+效果和上图一样。
+
+#### 4、万能清除法**`after伪类`**清浮动
+
+利用`:after`和`:before`来在元素内部插入两个元素块，从面达到清除浮动的效果。其实现原理类似于`clear:both`方法，只是区别在于:clear在父元素最后插入一个div.clear标签，而伪类清除法利用父元素的伪类在元素内部增加一个类似于div.clear的效果，没有在原来HTML文件中操作DOM
+
+```html
+.parent :after{
+    content: "";
+    display: block;
+    clear: both;
+}
+```
+
+  
+
 
 
 
