--- a/CSS/布局.md
+++ b/CSS/布局.md
@@ -10,6 +10,21 @@
 5、增加网页打开速度，增强用户体验。
 
 ### 典型布局方法及其特点
+#### 静态布局（Static Layout）
+即传统Web设计，对于PC设计一个Layout，在屏幕宽高有调整时，使用横向和竖向的滚动条来查阅被遮掩部分；
+对于移动设备，单独设计一个布局，使用不同的域名如wap.或m.。
+
+#### 自适应布局（Adaptive Layout）
+自适应布局（Adaptive）的特点是分别为不同的屏幕分辨率定义布局。布局切换时页面元素发生改变，但在每个布局中，页面元素不随窗口大小的调整发生变化。
+你可以把自适应布局看作是静态布局的一个系列。
+
+#### 流式布局（Liquid Layout）
+流式布局（Liquid）的特点（也叫"Fluid") 是页面元素的宽度按照屏幕进行适配调整，主要的问题是如果屏幕尺度跨度太大，那么在相对其原始设计而言过小或过大的屏幕上不能正常显示。
+网页中主要的划分区域的尺寸使用百分数（搭配min-*、max-*属性使用）。这种布局方式在Web前端开发的早期历史上，用来应对不同尺寸的PC屏幕（那是屏幕尺寸的差异不会太大），在当今的移动端开发也是常用布局方式，但缺点明显：宽度使用百分比定义，但是高度和文字大小等大都是用px来固定，所以在大屏幕的手机下显示效果会变成有些页面元素宽度被拉的很长，但是高度、文字大小还是和原来一样（即，这些东西无法变得“流式”），显示非常不协调。
+
+#### 响应式布局（Responsive Layout）
+分别为不同的屏幕分辨率（各种尺寸的PC、手机、手表、冰箱的Web浏览器等等）定义布局，同时，在每个布局中，应用流式布局的理念，即页面元素宽度随着窗口调整而自动适配。
+可以把响应式布局看作是流式布局和自适应布局设计理念的融合。
 
 
 ### 一些常用布局方法
