--- a/JS/运算符.md
+++ b/JS/运算符.md
@@ -68,10 +68,19 @@ undefined == 0 // false
 
 **null与Object**
 
-```
+```js
 null==Object  //false
 null===Object  //false
 ```
+
+
+
+```js
+[]==![]  //true
+[]==false  //true
+```
+
+
 
 ### 严格相等`===`
 
