--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -66,3 +66,23 @@ function sort(array) {
 _**Tips**_
 : 选择排序每次交换的元素都有可能不是相邻的, 因此它有可能打破原来值为相同的元素之间的顺序. 比如数组\[2,2,1,3\], 正向排序时, 第一个数字2将与数字1交换, 那么两个数字2之间的顺序将和原来的顺序不一致,**虽然它们的值相同, 但它们相对的顺序却发生了变化**. 我们将这种现象称作`不稳定性`.
 
+
+```js
+/** 3、选择排序 **/
+function sort(array) {
+    let res = [], min;
+    for (let i = 0, len = array.length; i < len - 1; i++) { //由于第一个开始跟后面对比，因此只需要对比n-1
+        min = i;
+        for (let j = i + 1; j < len; j++) {
+            if (array[min] > array[j]) {
+                min = j  //每一轮循环记下此轮最小值的下标，在后面将此下标值放到数列前面
+            }
+        }
+        exchange(min, i, array)
+    }
+    return array;
+}
+```
+
+
+
