--- a/JS/数组排序算法.md
+++ b/JS/数组排序算法.md
@@ -62,10 +62,9 @@ function sort(array) {
 
 ### 3、选择排序
 
-从算法逻辑上看, 选择排序是一种简单且直观的排序算法. 它也是两层循环. 内层循环就像工人一样, 它是真正做事情的, 内层循环每执行一遍, 将选出本次待排序的元素中最小\(或最大\)的一个, 存放在数组的起始位置. 而 外层循环则像老板一样, 它告诉内层循环你需要不停的工作, 直到工作完成\(也就是全部的元素排序完成\).
-_**Tips**_
+从算法逻辑上看, 选择排序是一种简单且直观的排序算法. 它也是两层循环. 内层循环就像工人一样, 它是真正做事情的, 内层循环每执行一遍, 将选出本次待排序的元素中最小\(或最大\)的一个, 存放在数组的起始位置. 而 外层循环则像老板一样, 它告诉内层循环你需要不停的工作, 直到工作完成\(也就是全部的元素排序完成\).  
+_**Tips**_  
 : 选择排序每次交换的元素都有可能不是相邻的, 因此它有可能打破原来值为相同的元素之间的顺序. 比如数组\[2,2,1,3\], 正向排序时, 第一个数字2将与数字1交换, 那么两个数字2之间的顺序将和原来的顺序不一致,**虽然它们的值相同, 但它们相对的顺序却发生了变化**. 我们将这种现象称作`不稳定性`.
-
 
 ```js
 /** 3、选择排序 **/
@@ -84,5 +83,7 @@ function sort(array) {
 }
 ```
 
+![](/assets/sort06.gif)
 
+![](/assets/sort6_1.png)
 
